@@ -18,8 +18,15 @@ package de.adorsys.aspsp.xs2a.connector.oauth;
 
 import de.adorsys.ledgers.middleware.api.domain.um.BearerTokenTO;
 import de.adorsys.psd2.aspsp.profile.service.AspspProfileService;
+import de.adorsys.psd2.mapper.Xs2aObjectMapper;
 import de.adorsys.psd2.xs2a.core.error.MessageErrorCode;
 import de.adorsys.psd2.xs2a.core.profile.ScaApproach;
+import de.adorsys.psd2.xs2a.domain.TppMessageInformation;
+import de.adorsys.psd2.xs2a.exception.MessageError;
+import de.adorsys.psd2.xs2a.service.discovery.ServiceTypeDiscoveryService;
+import de.adorsys.psd2.xs2a.service.mapper.psd2.ErrorMapperContainer;
+import de.adorsys.psd2.xs2a.service.mapper.psd2.ErrorType;
+import de.adorsys.psd2.xs2a.service.mapper.psd2.ServiceType;
 import de.adorsys.psd2.xs2a.web.error.TppErrorMessageBuilder;
 import de.adorsys.psd2.xs2a.web.filter.AbstractXs2aFilter;
 import de.adorsys.psd2.xs2a.web.filter.TppErrorMessage;
@@ -55,17 +62,23 @@ public class TokenAuthenticationFilter extends AbstractXs2aFilter {
     private final TokenValidationService tokenValidationService;
     private final AspspProfileService aspspProfileService;
     private final OauthDataHolder oauthDataHolder;
+    private final ServiceTypeDiscoveryService serviceTypeDiscoveryService;
+    private final ErrorMapperContainer errorMapperContainer;
+    private final Xs2aObjectMapper xs2aObjectMapper;
 
     public TokenAuthenticationFilter(@Value("${oauth.header-name:X-OAUTH-PREFERRED}") String oauthModeHeaderName,
                                      TppErrorMessageBuilder tppErrorMessageBuilder,
                                      TokenValidationService tokenValidationService,
                                      AspspProfileService aspspProfileService,
-                                     OauthDataHolder oauthDataHolder) {
+                                     OauthDataHolder oauthDataHolder, ServiceTypeDiscoveryService serviceTypeDiscoveryService, ErrorMapperContainer errorMapperContainer, Xs2aObjectMapper xs2aObjectMapper) {
         this.oauthModeHeaderName = oauthModeHeaderName;
         this.tppErrorMessageBuilder = tppErrorMessageBuilder;
         this.tokenValidationService = tokenValidationService;
         this.aspspProfileService = aspspProfileService;
         this.oauthDataHolder = oauthDataHolder;
+        this.serviceTypeDiscoveryService = serviceTypeDiscoveryService;
+        this.errorMapperContainer = errorMapperContainer;
+        this.xs2aObjectMapper = xs2aObjectMapper;
     }
 
     @Override
@@ -145,7 +158,12 @@ public class TokenAuthenticationFilter extends AbstractXs2aFilter {
     private void enrichError(HttpServletResponse response, int status, TppErrorMessage tppErrorMessage) throws IOException {
         response.setStatus(status);
         response.setHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE);
-        response.getWriter().print(tppErrorMessage.toString());
+        ServiceType serviceType = serviceTypeDiscoveryService.getServiceType();
+        MessageErrorCode messageErrorCode = tppErrorMessage.getCode();
+        Optional<ErrorType> byServiceTypeAndErrorCode = ErrorType.getByServiceTypeAndErrorCode(serviceType, messageErrorCode.getCode());
+        MessageError messageError = new MessageError(byServiceTypeAndErrorCode.get(), TppMessageInformation.of(tppErrorMessage.getCategory(), messageErrorCode));
+        ErrorMapperContainer.ErrorBody errorBody = errorMapperContainer.getErrorBody(messageError);
+        xs2aObjectMapper.writeValue(response.getWriter(), errorBody.getBody());
     }
 
     private String resolveBearerToken(HttpServletRequest request) {
